High contrast fix: set button to have solid white border instead of semi-transparent one.

--- a/assets/css/main-highcontrast.css
+++ b/assets/css/main-highcontrast.css
@@ -2074,7 +2074,7 @@ hr {
     transition: border-color 0.2s ease;
     background-color: transparent;
     border: solid 1px !important;
-    border-color: rgba(255, 255, 255, 0.15) !important;
+    border-color: white !important;
     border-radius: 3em;
     color: #ffffff /*!important*/;
     display: inline-block;
